--- a/assets/scss/_cssvars.scss
+++ b/assets/scss/_cssvars.scss
@@ -21,13 +21,14 @@
     --purple: #{map-get($colors, 'purple')};
     --secondary: #{map-get($colors, 'secondary')};
     --link: #{map-get($colors, 'link')};
+    --s-box-background-color: rgba(70, 90, 126, 0.4);
 
-    --teal-lake: #{map-get($colors, 'teal-lake')};
-    --electric-violet: #{map-get($colors, 'electric-violet')};
-    --honolulu-blue: #{map-get($colors, 'honolulu-blue')};
+    --teal: #{map-get($colors, 'teal')};
+    --violet: #{map-get($colors, 'violet')};
+    --light-blue: #{map-get($colors, 'light-blue')};
     --berry: #{map-get($colors, 'berry')};
-    --spanish-orange: #{map-get($colors, 'spanish-orange')};
-    --sea-green: #{map-get($colors, 'sea-green')};
+    --orange: #{map-get($colors, 'orange')};
+    --green: #{map-get($colors, 'green')};
 
     --white: #ffffff;
 
@@ -159,12 +160,12 @@
     --purple: #{map-get($colors-dark-mode, 'purple')};
     --secondary: #{map-get($colors-dark-mode, 'secondary')};
     --link: #{map-get($colors-dark-mode, 'link')};
-    --teal-lake: #{map-get($colors-dark-mode, 'teal-lake')};
-    --electric-violet: #{map-get($colors-dark-mode, 'electric-violet')};
-    --honolulu-blue: #{map-get($colors-dark-mode, 'honolulu-blue')};
+    --teal: #{map-get($colors-dark-mode, 'teal')};
+    --violet: #{map-get($colors-dark-mode, 'violet')};
+    --light-blue: #{map-get($colors-dark-mode, 'light-blue')};
     --berry: #{map-get($colors-dark-mode, 'berry')};
-    --spanish-orange: #{map-get($colors-dark-mode, 'spanish-orange')};
-    --sea-green: #{map-get($colors-dark-mode, 'sea-green')};
+    --orange: #{map-get($colors-dark-mode, 'orange')};
+    --green: #{map-get($colors-dark-mode, 'green')};
 
     --shade-000: var(--background);
     --shade-400: #{map-get($colors-dark-mode, 'background')};
@@ -172,4 +173,5 @@
     --text-color: var(--text-color-on-dark);
     --link-button-color: var(--text-color-on-dark);
     --link-button-hover-color: #{scale-color(map-get($colors, 'link'), $lightness: 70%)};
+    --s-box-background-color: #{map-get($colors, 'dark-blue')};
 }
