--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -91,7 +91,7 @@ a {
   h1 {
     font-size: var(--font-size-12);
     line-height: var(--font-size-12);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-200);
     letter-spacing: -1px;
     color: var(--text-color);
     @include media('<md') {
@@ -388,9 +388,9 @@ a:visited {
 }
 
 .p-inputtext {
-  background-color: var(--s-box-background-color);
-  color: var(--text-color);
-  border-color: var(--stroke);
+  background-color: rgba(70, 90, 126, 0.4);
+  // color: var(--text-color);
+  // border-color: var(--stroke);
 }
 .p-inputwrapper {
   .p-icon {
