strip out the rest of tracking

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -25,7 +25,7 @@ $colors: (
     'link': #2b6f99,
     'teal': #298c9a,
     'violet': #9747ff,
-    'light-blue': #0b7bbc,
+    'light-blue': #57abdc,
     'berry': #bb339e,
     'orange': #F94127,
     'green': #469c78
@@ -52,7 +52,7 @@ $colors-dark-mode: (
     'link': #ffffff,
     'teal': #298c9a,
     'violet': #9747ff,
-    'light-blue': #0b7bbc,
+    'light-blue': #57abdc,
     'berry': #bb339e,
     'orange': #F94127,
     'green': #469c78
