--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -7,17 +7,11 @@ $type-header1: (
     'default': (
         'values': (
             'font-family': var(--font-family-header),
-            'font-size': var(--font-size-15),
-            'line-height': var(--font-size-15),
-            'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
+            'font-size': var(--font-size-14),
+            'line-height': var(--font-size-14),
+            'font-weight': 200,
+            'letter-spacing': 1px,
             'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-10),
-            'line-height': var(--font-size-10),
         ),
     ),
 );
@@ -28,16 +22,10 @@ $type-header2: (
             'font-size': var(--font-size-13),
             'line-height': var(--font-size-13),
             'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
+            'letter-spacing': 1px,
             'color': var(--text-color),
         ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-10),
-            'line-height': var(--font-size-10),
-        ),
-    ),
+    )
 );
 $type-header3: (
     'default': (
@@ -46,16 +34,10 @@ $type-header3: (
             'font-size': var(--font-size-12),
             'line-height': var(--font-size-12),
             'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
+            'letter-spacing': 1px,
             'color': var(--text-color),
         ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-9),
-            'line-height': var(--font-size-9),
-        ),
-    ),
+    )
 );
 $type-header4: (
     'default': (
@@ -64,75 +46,10 @@ $type-header4: (
             'font-size': var(--font-size-10),
             'line-height': var(--font-size-10),
             'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
+            'letter-spacing': 1px,
             'color': var(--text-color),
         ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-7),
-            'line-height': var(--font-size-7),
-            'letter-spacing': -0.01em,
-        ),
-    ),
-);
-
-$type-header5: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-8),
-            'line-height': var(--font-size-9),
-            'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-7),
-            'letter-spacing': -0.01em,
-        ),
-    ),
-);
-
-$type-header6: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-7),
-            'font-weight': var(--font-weight-200),
-            'letter-spacing': 0,
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-6),
-            'letter-spacing': -0.01em,
-        ),
-    ),
-);
-
-$type-header7: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-8),
-            'font-weight': var(--font-weight-200),
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-7),
-        ),
-    ),
+    )
 );
 
 $type-title: (
@@ -155,14 +72,15 @@ $type-title: (
     ),
 );
 
-$type-paragraph1: (
+$type-paragraph: (
     'default': (
         'values': (
             'font-family': var(--font-family),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-9),
+            'font-size': var(--font-size-5),
+            'line-height': var(--font-size-8),
             'font-weight': var(--font-weight),
             'color': var(--text-color),
+            'letter-spacing': 1px,
         ),
     ),
     $medium: (
@@ -173,42 +91,7 @@ $type-paragraph1: (
     ),
 );
 
-$type-paragraph2: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-9),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-8),
-        ),
-    ),
-);
-$type-paragraph3: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-9),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-8),
-        ),
-    ),
-);
-
-$type-label1: (
+$type-label: (
     'default': (
         'values': (
             'font-family': var(--font-family-header),
@@ -216,140 +99,13 @@ $type-label1: (
             'line-height': var(--font-size-10),
             'font-weight': var(--font-weight),
             'color': var(--text-color),
-            'letter-spacing': -0.01em,
+            'letter-spacing': 0,
             'text-transform': uppercase,
         ),
     ),
     $medium: (
         'values': (
             'font-size': var(--font-size-5),
-            'line-height': var(--font-size-5),
-        ),
-    ),
-);
-
-$type-label2: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-7),
-            'line-height': var(--font-size-7),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-            'letter-spacing': -0.01em,
-            'text-transform': uppercase,
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-5),
-        ),
-    ),
-);
-
-$type-label3: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-6),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-            'letter-spacing': -0.01em,
-            'text-transform': uppercase,
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-5),
-        ),
-    ),
-);
-
-$type-link: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-5),
-            'line-height': 15.4px,
-            'font-weight': var(--font-weight-500),
-            'color': var(--text-color),
-            'text-decoration': none,
-        ),
-    ),
-);
-$type-listlink: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-7),
-            'line-height': var(--font-size-7),
-            'font-weight': var(--font-weight-500),
-            'color': var(--text-color),
-            'letter-spacing': -0.01em,
-            'text-transform': uppercase,
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': var(--font-size-6),
-            'line-height': var(--font-size-6),
-        ),
-    ),
-);
-$type-textlink1: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': var(--font-size-5),
-            'line-height': var(--font-size-6),
-            'font-weight': var(--font-weight-500),
-            'color': var(--text-color),
-            'text-decoration': underline,
-        ),
-    ),
-);
-
-$type-textlink2: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': 13px,
-            'line-height': var(--font-size-6),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-            'text-decoration': underline,
-        ),
-    ),
-);
-
-$type-caption: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': 13px,
-            'line-height': var(--font-size-7),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-        ),
-    ),
-);
-
-$type-fineprint: (
-    'default': (
-        'values': (
-            'font-family': var(--font-family-header),
-            'font-size': 12px,
-            'line-height': var(--font-size-6),
-            'font-weight': var(--font-weight),
-            'color': var(--text-color),
-        ),
-    ),
-    $medium: (
-        'values': (
-            'font-size': 11px,
             'line-height': var(--font-size-5),
         ),
     ),
@@ -398,54 +154,20 @@ h4,
 
 p,
 .p1,
-.type-paragraph1 {
+.type-paragraph {
     padding: 0;
     margin: 0;
-    @include font-config($type-paragraph1);
+    @include font-config($type-paragraph);
 }
 
-.p2,
-.type-paragraph2 {
-    @include font-config($type-paragraph2);
-}
-
-.p3,
-.type-paragraph3 {
-    @include font-config($type-paragraph3);
-}
-
-.type-label1 {
-    @include font-config($type-label1);
-}
-.type-label2 {
-    @include font-config($type-label2);
-}
-.type-label3 {
-    @include font-config($type-label3);
-}
-.type-link {
-    @include font-config($type-link);
-}
-.type-listlink {
-    @include font-config($type-listlink);
-}
-.type-textlink1 {
-    @include font-config($type-textlink1);
-}
-.type-textlink2 {
-    @include font-config($type-textlink2);
-}
-.type-caption {
-    @include font-config($type-caption);
-}
-.type-fineprint {
-    @include font-config($type-fineprint);
+.type-label {
+    @include font-config($type-label);
 }
 
 ul,
 ol {
     padding-left: 1rem;
     li {
-        @include font-config($type-paragraph1);
+        @include font-config($type-paragraph);
     }
 }
