--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -5,24 +5,24 @@ $mobileBreakpoint: '<md';
 $page-gutter-padding: 32px;
 
 $colors: (
-    'background': #ffffff,
+    'background': #1b223c,
     'background2': rgba(255, 255, 255, 0.1),
-    'background3': #e8e8e8,
-    'background4': #333333,
+    'background3': #ffffff1a,
+    'background4': #13182a,
     'dark-blue': #060027,
     'blue': #120175,
-    'stroke': #eaeaea,
-    'night': #101012,
+    'stroke': #1b223c,
+    'night': #ffffff,
     'red': #de1e3d,
     'yellow': #fcd240,
-    'indigo': #013878,
-    'success': #5cb85c,
-    'error': #ff0000,
+    'indigo': #4561c5,
+    'success': #71c171,
+    'error': #fd5757,
     'black': #000000,
     'info': #70c5f6,
     'purple': #4e28a7,
     'secondary': #999999,
-    'link': #2b6f99,
+    'link': #ffffff,
     'teal': #298c9a,
     'violet': #9747ff,
     'light-blue': #8ac4e6,
