--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -85,6 +85,7 @@ body {
 a {
   -webkit-touch-callout: none; /* disable the iOS long press action */
   -webkit-user-select: none; /* disable text selection */
+  color: var(--text-color);
 }
 
 @mixin html-formatting() {
