expanded player BS

--- a/assets/scss/_extensions.scss
+++ b/assets/scss/_extensions.scss
@@ -37,6 +37,7 @@
 .p-button {
     font-weight: var(--font-weight-700);
     background-color: var(--purple);
+    color: var(--text-color)
 }
 
 form {
