--- a/assets/scss/_cssvars.scss
+++ b/assets/scss/_cssvars.scss
@@ -1,7 +1,4 @@
-:root,
-[data-style-mode='light'],
-.style-mode-light {
-    color-scheme: light;
+:root {
     --background: #{$backgroundGradient1};
     --background2: #{map-get($colors, 'background2')};
     --background3: #{map-get($colors, 'background3')};
@@ -144,41 +141,5 @@
     --persistent-player-button-radius: #{$persistentPlayerButtonRadius};
     --persistent-player-button-height: #{$persistentPlayerButtonHeight};
     --persistent-player-button-width: #{$persistentPlayerButtonWidth};
-}
-[data-style-mode='dark'],
-.style-mode-dark {
-    color-scheme: dark;
-
-    --background: #{$backgroundGradient1};
-    --background2: #{map-get($colors-dark-mode, 'background2')};
-    --background3: #{map-get($colors-dark-mode, 'background3')};
-    --background4: #{map-get($colors-dark-mode, 'background4')};
-    --dark-blue: #{map-get($colors-dark-mode, 'dark-blue')};
-    --blue: #{map-get($colors-dark-mode, 'blue')};
-    --stroke: #{map-get($colors-dark-mode, 'stroke')};
-    --night: #{map-get($colors-dark-mode, 'night')};
-    --red: #{map-get($colors-dark-mode, 'red')};
-    --yellow: #{map-get($colors-dark-mode, 'yellow')};
-    --indigo: #{map-get($colors-dark-mode, 'indigo')};
-    --success: #{map-get($colors-dark-mode, 'success')};
-    --error: #{map-get($colors-dark-mode, 'error')};
-    --black: #{map-get($colors-dark-mode, 'black')};
-    --info: #{map-get($colors-dark-mode, 'info')};
-    --purple: #{map-get($colors-dark-mode, 'purple')};
-    --secondary: #{map-get($colors-dark-mode, 'secondary')};
-    --link: #{map-get($colors-dark-mode, 'link')};
-    --teal: #{map-get($colors-dark-mode, 'teal')};
-    --violet: #{map-get($colors-dark-mode, 'violet')};
-    --light-blue: #{map-get($colors-dark-mode, 'light-blue')};
-    --berry: #{map-get($colors-dark-mode, 'berry')};
-    --orange: #{map-get($colors-dark-mode, 'orange')};
-    --green: #{map-get($colors-dark-mode, 'green')};
-
-    --shade-000: var(--background);
-    --shade-400: #{map-get($colors-dark-mode, 'background')};
-
-    --text-color: var(--text-color-on-dark);
-    --link-button-color: var(--text-color-on-dark);
-    --link-button-hover-color: #{scale-color(map-get($colors, 'link'), $lightness: 70%)};
-    --s-box-background-color: #{map-get($colors, 'dark-blue')};
+    --persistent-player-slider-buffer: #{$persistentPlayerSliderBuffer};
 }
